--- a/供应链/泰国_订单入库/index.html
+++ b/供应链/泰国_订单入库/index.html
@@ -115,7 +115,7 @@
                 泰国-订单入库
             </h1>
             <p class="text-gray text-base sm:text-lg max-w-3xl mx-auto">
-                采购单解析 · 验货入库 · 调拨记录生成 · 海仓运单编辑 · 回执单生成 | 替代人工操作，提升泰国订单入库流程效率与准确性
+                泰国对内表格解析 · 验货入库 · 调拨记录生成 · 海仓运单编辑 · 回执单生成 | 替代人工操作，提升泰国订单入库流程效率与准确性
             </p>
         </div>
     </header>
@@ -212,11 +212,11 @@
                     </thead>
                     <tbody>
                         <tr class="table-hover-row hover:bg-primaryLight/50">
-                            <td class="p-3 border border-grayBorder">马帮ERP登录与采购单数据读取</td>
+                            <td class="p-3 border border-grayBorder">马帮ERP登录与泰国对内表格数据读取</td>
                             <td class="p-3 border border-grayBorder">马帮ERP + Excel</td>
                         </tr>
                         <tr class="table-hover-row hover:bg-primaryLight/50">
-                            <td class="p-3 border border-grayBorder">采购单数据解析（日期/数量合并）</td>
+                            <td class="p-3 border border-grayBorder">泰国对内表格数据解析（日期/数量合并）</td>
                             <td class="p-3 border border-grayBorder">Excel</td>
                         </tr>
                         <tr class="table-hover-row hover:bg-primaryLight/50">
@@ -272,10 +272,10 @@
                     </div>
                 </div>
 
-                <!-- 步骤2：采购单数据读取 -->
+                <!-- 步骤2：泰国对内表格数据读取 -->
                 <div class="collapse-item py-2">
                     <div class="collapse-header py-2 px-0 group">
-                        <span class="font-medium text-dark group-hover:text-primary transition-colors">步骤2：采购单数据读取与解析</span>
+                        <span class="font-medium text-dark group-hover:text-primary transition-colors">步骤2：泰国对内表格数据读取与解析</span>
                         <i class="fa fa-chevron-down text-xs text-gray group-hover:text-primary"></i>
                     </div>
                     <div class="collapse-content pl-2 text-gray">
@@ -368,10 +368,10 @@
                     <i class="fa fa-chevron-down text-xs text-primary"></i>
                 </div>
 
-                <!-- 规则1：采购单数据解析 -->
+                <!-- 规则1：泰国对内表格数据解析 -->
                 <div class="collapse-item py-2">
                     <div class="collapse-header py-2 px-0 group">
-                        <span class="font-medium text-dark group-hover:text-primary transition-colors">规则1：采购单数据解析规范</span>
+                        <span class="font-medium text-dark group-hover:text-primary transition-colors">规则1：泰国对内表格数据解析规范</span>
                         <i class="fa fa-chevron-down text-xs text-gray group-hover:text-primary"></i>
                     </div>
                     <div class="collapse-content pl-2 text-gray">
