--- a/供应链/菲律宾3仓_订单入库/index.html
+++ b/供应链/菲律宾3仓_订单入库/index.html
@@ -210,11 +210,11 @@
                     </thead>
                     <tbody>
                         <tr class="table-hover-row hover:bg-primaryLight/50">
-                            <td class="p-3 border border-grayBorder">马帮ERP登录与采购单数据读取</td>
+                            <td class="p-3 border border-grayBorder">马帮ERP登录与菲律宾对内表格数据读取</td>
                             <td class="p-3 border border-grayBorder">马帮ERP + Excel</td>
                         </tr>
                         <tr class="table-hover-row hover:bg-primaryLight/50">
-                            <td class="p-3 border border-grayBorder">采购单数据解析（日期筛选/重复识别）</td>
+                            <td class="p-3 border border-grayBorder">菲律宾对内表格数据解析（日期筛选/重复识别）</td>
                             <td class="p-3 border border-grayBorder">Excel</td>
                         </tr>
                         <tr class="table-hover-row hover:bg-primaryLight/50">
@@ -266,10 +266,10 @@
                     </div>
                 </div>
 
-                <!-- 步骤2：采购单数据读取 -->
+                <!-- 步骤2：菲律宾对内表格数据读取 -->
                 <div class="collapse-item py-2">
                     <div class="collapse-header py-2 px-0 group">
-                        <span class="font-medium text-dark group-hover:text-primary transition-colors">步骤2：采购单数据读取与解析</span>
+                        <span class="font-medium text-dark group-hover:text-primary transition-colors">步骤2：菲律宾对内表格数据读取与解析</span>
                         <i class="fa fa-chevron-down text-xs text-gray group-hover:text-primary"></i>
                     </div>
                     <div class="collapse-content pl-2 text-gray">
@@ -343,10 +343,10 @@
                     <i class="fa fa-chevron-down text-xs text-primary"></i>
                 </div>
 
-                <!-- 规则1：采购单数据解析 -->
+                <!-- 规则1：菲律宾对内表格数据解析 -->
                 <div class="collapse-item py-2">
                     <div class="collapse-header py-2 px-0 group">
-                        <span class="font-medium text-dark group-hover:text-primary transition-colors">规则1：采购单数据解析规范</span>
+                        <span class="font-medium text-dark group-hover:text-primary transition-colors">规则1：菲律宾对内表格数据解析规范</span>
                         <i class="fa fa-chevron-down text-xs text-gray group-hover:text-primary"></i>
                     </div>
                     <div class="collapse-content pl-2 text-gray">
