更新--进销存、唛头

--- a/供应链/印尼_进销存/index.html
+++ b/供应链/印尼_进销存/index.html
@@ -142,7 +142,7 @@
                             <td class="p-3 border border-grayBorder">印尼进销存2.0-汇总表统计</td>
                             <td class="p-3 border border-grayBorder">供应链</td>
                             <td class="p-3 border border-grayBorder">按需执行（定时/手动触发）</td>
-                            <td class="p-3 border border-grayBorder">自动化：5~10分钟（人工：30+分钟）</td>
+                            <td class="p-3 border border-grayBorder">自动化：5~10分钟</td>
                         </tr>
                     </tbody>
                 </table>
