--- a/供应链/泰国_日销数据更新/index.html
+++ b/供应链/泰国_日销数据更新/index.html
@@ -107,7 +107,7 @@
     <header class="py-8 px-4 sm:px-6 lg:px-8 bg-gradient-to-b from-white to-primaryLight">
         <div class="max-w-4xl mx-auto text-center">
             <h1 class="text-[clamp(22px,4vw,32px)] font-bold text-secondary mb-3">
-                泰国进销存-汇总表统计自动化流程
+                泰国_进销存自动化处理流程
             </h1>
             <p class="text-gray text-base sm:text-lg max-w-3xl mx-auto">
                 供应链数据统计自动化方案 | 多仓报表导出 · 数据清洗 · 总表合并 · 公式计算
@@ -144,10 +144,10 @@
                     </thead>
                     <tbody>
                         <tr class="table-hover-row hover:bg-primaryLight/50">
-                            <td class="p-3 border border-grayBorder">泰国进销存2.0-商品销量报表自动化</td>
+                            <td class="p-3 border border-grayBorder">泰国_日销数据更新</td>
                             <td class="p-3 border border-grayBorder">供应链</td>
                             <td class="p-3 border border-grayBorder">按需执行（定时/手动触发）</td>
-                            <td class="p-3 border border-grayBorder">自动化：5~10分钟（人工：30+分钟）</td>
+                            <td class="p-3 border border-grayBorder">自动化：5~10分钟</td>
                         </tr>
                     </tbody>
                 </table>
