--- a/供应链/泰国_唛头/index.html
+++ b/供应链/泰国_唛头/index.html
@@ -134,7 +134,7 @@
                             <td class="p-3 border border-grayBorder">海仓_马帮ERP-采购管理-采购信息同步至卖头方-泰国</td>
                             <td class="p-3 border border-grayBorder">供应链</td>
                             <td class="p-3 border border-grayBorder">按需执行（定时/手动触发）</td>
-                            <td class="p-3 border border-grayBorder">自动化：3~5分钟/条（人工：15+分钟/条）</td>
+                            <td class="p-3 border border-grayBorder">自动化：3~5分钟/条</td>
                         </tr>
                     </tbody>
                 </table>
