更新--泰国账单导出

--- a/财务/泰国账单导出/index.html
+++ b/财务/泰国账单导出/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>泰国账单导出</title>
+    <title>泰国站点账单导出</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script>
@@ -89,7 +89,7 @@
     <header class="py-8 px-4 sm:px-6 lg:px-8 bg-gradient-to-b from-white to-primaryLight">
         <div class="max-w-4xl mx-auto text-center">
             <h1 class="text-[clamp(22px,4vw,32px)] font-bold text-secondary mb-3">
-                泰国账单导出-自动化处理流程
+                泰国站点账单导出-自动化处理流程
             </h1>
             <p class="text-gray text-base sm:text-lg max-w-3xl mx-auto">
                 泰国多平台店铺订单/账单自动化导出 | 石墨文档店铺信息导出 · 战斧浏览器多店铺批量导出 · 本土/跨境店差异化处理 · Shopee 3PF双账户分离 · 标准化文件分类归档
